--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
     		</ul>
 		</nav>
 		<div class="container">
-    		<div class="blurb">
+    			<div class="blurb">
         		<h1>Hallo!</h1>
-				<p>I hope you enjoy part 2 of your puzzlin' adventure! <em>GOOD LUCK</em><a href="/about">Extra hints here</a></p>
-    		</div><!-- /.blurb -->
+				<p>I hope you enjoy part 2 of your puzzlin' adventure! <em>GOOD LUCK</em><a href="/about"> Extra hints here</a></p>
+    			</div><!-- /.blurb -->
 		</div><!-- /.container -->
+		<div class="container">
+    			<div class="blurb">
+				<iframe src="https://www.w3schools.com" title="W3Schools Free Online Web Tutorials"></iframe>
+    			</div><!-- /.blurb -->
+		</div><!-- /.container -->
+
 		<footer>
-    		<ul>
+    			<ul>
         		<li><a href="mailto:HelensBirthdayCrossword@gmail.com">email</a></li>
         		<li><a href="https://github.com/HelensBirthdayCrossword">github.com/HelensBirthdayCrossword</a></li>
 			</ul>
