--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		</div><!-- /.container -->
 		<div class="container">
     			<div class="blurb">
-				<iframe src="https://www.w3schools.com" title="W3Schools Free Online Web Tutorials"></iframe>
+				<iframe src="https://www.benjoyce.co.uk/crosswords/1" title="The main crossword"></iframe>
     			</div><!-- /.blurb -->
 		</div><!-- /.container -->
 
