--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
     		</ul>
 		</nav>
-		<div class="container">
+		<div>
     			<div class="blurb">
         		<h1>Hallo!</h1>
-				<p>I hope you enjoy part 2 of your puzzlin' adventure! <em>GOOD LUCK</em><a href="/about"> Extra hints here</a></p>
-    			</div><!-- /.blurb -->
-		</div><!-- /.container -->
+				<p>I hope you enjoy part 2 of your puzzlin' adventure! <em>GOOD LUCK</em></p>
+				<p><a href="/help"> Extra hints here</a></p>
+    			</div>
+		</div>
 		<div class="container">
-    			<div class="blurb">
+    			<div class="Crossword">
 				<iframe src="https://www.benjoyce.co.uk/crosswords/1" title="The main crossword"></iframe>
     			</div><!-- /.blurb -->
 		</div><!-- /.container -->
