--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
         		<li><a href="/">Home</a></li>
     		</ul>
 		</nav>
-		<div>
+		
+		<!-- Some nice headers and text -->
+		<div class="container">
     			<div class="blurb">
         		<h1>Hallo!</h1>
 				<p>I hope you enjoy part 2 of your puzzlin' adventure! <em>GOOD LUCK</em></p>
 				<p><a href="/help"> Extra hints here</a></p>
     			</div>
 		</div>
-		<div class="container">
-    			<div class="Crossword">
-				<iframe src="https://www.benjoyce.co.uk/crosswords/1" title="The main crossword"></iframe>
-    			</div><!-- /.blurb -->
-		</div><!-- /.container -->
+		<div class="crossword">
+			<iframe src="https://www.benjoyce.co.uk/crosswords/1" title="The main crossword"></iframe>
+		</div>
 
 		<footer>
     			<ul>
