--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		<div class="container">
     			<div class="blurb">
         		<h1>Hallo!</h1>
-				<p>I hope you enjoy part 2 of your puzzlin' adventure! <em>GOOD LUCK</em></p>
+				<p>I hope you enjoy part 2 of your puzzlin' adventure! Not entirely
+				sure how this works but lets see</p>
 				<p><a href="/help"> Extra hints here</a></p>
     			</div>
 		</div>
