--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<div class="container">
     			<div class="blurb">
         		<h1>Hallo!</h1>
-				<p>I hope you enjoy part 2 of your puzzlin' adventure! Not entirely
-				sure how this works but lets see</p>
+				<p>I hope you enjoy part 2 of your puzzlin' adventure! 
+				<br>A surprise waits for you at the end :D</p>
     			</div>
 		</div>
 		<div class="crossword">
