--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</div>
 		<div class="crossword">
 			<iframe src="https://www.benjoyce.co.uk/crosswords/1" title="The main crossword"></iframe>
-			<a href="/help"> Extra hints here</a>
+			<br><a href="/help"> Extra hints here</a>
 		</div>
 
 		<footer>
