--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     			</div>
 		</div>
 		<div class="crossword">
-			<iframe src="https://www.benjoyce.co.uk/crosswords/1" title="The main crossword"></iframe>
+			<iframe src="https://www.benjoyce.co.uk/crosswords/tang/" style="border:none;" width="481px" height="681px" />
 			<br><a href="/help"> Extra hints here</a>
 		</div>
 
