--- a/help/index.html
+++ b/help/index.html
@@ -3,6 +3,6 @@
     <h1>Need some help?</h1>
   </div>
   <div>
-    <p> Here are some hints <p>
+    <p> There is no help here but you are free to ask. Kisses may be required :D <p>
   </div>
  </body>
