--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<div class="container">
     			<div class="blurb">
         		<h1>Hallo!</h1>
-				<p>I hope you enjoy part 2 of your puzzlin' adventure! 
-				<br>A surprise waits for you at the end :D</p>
+				<p>Well done for solving the puzzle box but what is this? A crossword of the cryptic variety!?
+				<br>Unfortunately, your long and arduous journey must continue. GOOD LUCK!</p>
     			</div>
 		</div>
 		<div class="crossword">
