--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 		<!-- Some nice headers and text -->
 		<div class="container">
     			<div class="blurb">
-        		<h1>Hallo!</h1>
-				<p>Well done for solving the puzzle box but what is this? A crossword of the cryptic variety!?
-				<br>Unfortunately, your long and arduous journey must continue. GOOD LUCK!</p>
+        		<h1>The journey continues...</h1>
+				<p>Congratulations! You have recieved your next gift: The gift of terrible crossword clues.
+				<br>GOOD LUCK!</p>
     			</div>
 		</div>
 		<div class="crossword">
@@ -28,7 +28,7 @@
 		<footer>
     			<ul>
         		<li><a href="mailto:HelensBirthdayCrossword@gmail.com">email</a></li>
-        		<li><a href="https://github.com/HelensBirthdayCrossword">github.com/HelensBirthdayCrossword</a></li>
+        		<li><a href="https://github.com/HelensBirthdayCrossword">I like you lots</a></li>
 			</ul>
 		</footer>
 	</body>
