--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 			<iframe src="https://www.benjoyce.co.uk/crosswords/tang/" style="border:none;" width="481px" height="681px" />
 			<br><a href="/help"> Extra hints here</a>
 		</div>
+		
+		<div class="container">
+			<a href="/help"> Extra hints here</a>
+		</div>
 
 		<footer>
     			<ul>
