--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		<div class="container">
     			<div class="blurb">
         		<h1>The journey continues...</h1>
-				<p>Congratulations! You have recieved your next gift: The gift of terrible crossword clues.
+				<p>Congratulations!
+				<br>You have recieved your next gift: The gift of terrible crossword clues.
 				<br>GOOD LUCK!</p>
     			</div>
 		</div>
@@ -25,7 +26,7 @@
 			<br><a href="/help"> Extra hints here</a>
 		</div>
 		
-		<div class="container">
+		<div>
 			<a href="/help"> Extra hints here</a>
 		</div>
 
