--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 	<body>
 		<nav>
     		<ul>
-        		<!--<li><a href="/">Home</a></li>-->
+        		<li><a href="/">Home</a></li>
+        		<li><a href="/help">Extra hints here</a></li>
     		</ul>
 		</nav>
 		
@@ -24,10 +25,6 @@
 		<div class="crossword">
 			<iframe src="https://www.benjoyce.co.uk/crosswords/tang/" style="border:none;" width="481px" height="681px"/>
 			<br><a href="/help"> Extra hints here</a>
-		</div>
-		
-		<div>
-			<a href="/help"> Extra hints here</a>
 		</div>
 
 		<footer>
