--- a/help/index.html
+++ b/help/index.html
@@ -1,3 +1,10 @@
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+        		<li><a href="/help">Extra hints here</a></li>
+    		</ul>
+		</nav>
+
 <body>
   <div>
     <h1>Need some help?</h1>
