--- a/help/index.html
+++ b/help/index.html
@@ -1,15 +1,24 @@
+		
+
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Helen's (Terrible) Birthday Crossword!</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+	</head>
+	<body>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
         		<li><a href="/help">Extra hints here</a></li>
     		</ul>
 		</nav>
-
-<body>
-  <div>
-    <h1>Need some help?</h1>
-  </div>
-  <div>
-    <p> There is no help here but you are free to ask. Kisses may be required :D <p>
-  </div>
- </body>
+ 	<div>
+    		<h1>Need some help?</h1>
+  	</div>
+  	<div>
+    		<p> There is no help here but you are free to ask. Kisses may be required :D <p>
+  	</div>
+ 	</body>
+</html>
