--- a/help/index.html
+++ b/help/index.html
@@ -18,7 +18,7 @@
     		<h1>Need some help?</h1>
   	</div>
   	<div>
-    		<p> There is no help here but you are free to ask. Kisses may be required :D <p>
+    		<p>Sorry no hints here but you can ask me for help at any time. Kisses may be required :D<p>
   	</div>
  	</body>
 </html>
